# telegram-bot-mmo

./: .dockerignore  .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  python-app.yml  python_linting.yml
alembic/: env.py
alembic/versions/: f47fd3dc9c0a_rename_telegram_user_profile_table.py
app/: config.py  keyboard.py  main.py  utils.py
app/db/: db_init.py  db_register.py  db_schemas.py
app/services/: users.py
telegram_bot_mmo/: keyboard.py  main.py
telegram_bot_mmo/db/: db_init.py  db_schemas.py
telegram_bot_mmo/services/: users.py
tests/: test_app.py
