[tool.poetry]
name = "telegram_bot_mmo"
version = "0.1.0"
description = ""
authors = ["synalice <nikita.nikita.krasnov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
