[tool.poetry]
name = "telegram_bot_mmo"
version = "0.1.0"
description = ""
authors = ["synalice <nikita.nikita.krasnov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.31"
python-dotenv = "^0.19.2"
aiogram = "^2.18"
psycopg2-binary = "^2.9.3"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
